--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         function didLoad() {
             if(navigator.userAgent.indexOf("WeGame/0.2.0") !=-1)
             {
-                window.location.href="weiyou://didLoad/regWeixin/registerHandlerForWeixinShareContent/regSinaWeibo/registerHandlerForSinaWeiboContent/regFacebook/registerHandlerForFacebookShareContent/regTwitter/registerHandlerForTwitterShareContent"  // by decamincow
-            }
+                window.location.href="weiyou://didLoad/regWeixin/registerHandlerForWeixinShareContent/regSinaWeibo/registerHandlerForSinaWeiboContent/regFacebook/registerHandlerForFacebookShareContent/regTwitter/registerHandlerForTwitterShareContent";  // by decamincow
+            }else{return;}
             
         }
     </script>
-</head><body style="margin: 0px; padding: 0px; background: #000;" onLoad="didLoad()"><div id="main_container"></div><script>
+</head><body style="margin: 0px; padding: 0px; background: #000;"><div id="main_container"></div><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;
